# filewatch

./: .clang-format  .gitignore  CMakeLists.txt  SConstruct
cmake/: CompilerWarnings.cmake  Conan.cmake  FindGRPC.cmake
site_scons/: site_init.py
site_scons/site_tools/: catch_test.py  grpc.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  SConscript  bw_combine.h  loop_thread.cpp  loop_thread.h  tee_output.cpp  tee_output.h
src/daemon/: .gitignore  CMakeLists.txt  SConscript  defaultfilesystem.cpp  defaultfilesystem.h  directoryeventlistener.cpp  directoryeventlistener.h  directoryview.cpp  directoryview.h  directorywatcher.cpp  directorywatcher.h  filesystem.cpp  filesystem.h  filesystemfactory.cpp  filesystemfactory.h  filesystemwatcherfactory.cpp  filesystemwatcherfactory.h  fileview.cpp  fileview.h  filewatcher.cpp  filewatcher.h  linuxfilesystem.cpp  linuxfilesystem.h  main.cpp  server.cpp  server.h  windowsfilesystem.cpp  windowsfilesystem.h
src/daemon/details/: inotify.cpp  inotify.h
src/daemon/doc/: daemon-overview.dia  urls.txt
src/daemon/unittest/: .clang-tidy  dummyfilesystem.h  test_directorywatcher.cpp  test_filesystem.cpp  test_filesystemwatcherfactory.cpp  test_filewatcher.cpp  test_linux_filesystem.cpp  testsomething.cpp
src/rpc_defs/: .gitignore  CMakeLists.txt  SConscript  filewatch.proto
src/viewer/: .gitignore  CMakeLists.txt  SConscript  main.cpp
src/viewer/doc/: viewer-overview.dia
src/viewer/unittest/: testsomething.cpp
src/viewer/web/: crow_fwd.h  fileresources.cpp  fileresources.h  restserver.cpp  restserver.h  staticpages.cpp  staticpages.h
src/viewer/web/pages/: CMakeLists.txt
src/viewer/web/pages/fwview/: CMakeLists.txt  package-lock.json  package.json
src/viewer/web/pages/fwview/src/: index.css  index.js
tests/: CMakeLists.txt
tests/daemon/: .gitignore  CMakeLists.txt  SConscript  connectivity.py  filesys.py  run_tests.py  test_100_can_access_Directory_service.py  test_100_can_access_FileWatch_service.py  test_100_can_access_File_service.py  test_200_dirservice_listdirs.py  test_200_dirservice_listfiles.py  test_200_fileservice_getcontents.py  test_300_dirservice_listenforevents.py
tests/systest/: common_tests.py  filesys.py  runningprocess.py  runtests.py  teeoutput.py  temporarydir.py
tests/viewer/: CMakeLists.txt  myhttp.py  run_tests.py  systest_import.py  test_100_serves_index.py  test_200_files.py
